# pipecat-getstream

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml
src/pipecat_getstream/: __init__.py  transport.py  utils.py
src/tests/: conftest.py  test_getstream_transport.py
