[build-system]
requires = ["hatchling", "hatch-vcs", "setuptools-scm"]
build-backend = "hatchling.build"

[project]
name = "pipecat-getstream"
dynamic = ["version"]
description = "getstream.io transport support for Pipecat agents framework."
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"
dependencies = ["getstream[webrtc,telemetry]>=3.0.4,<4", "pipecat-ai>=0.0.108"]

[project.urls]
Source = "https://github.com/GetStream/pipecat-getstream"

[dependency-groups]

dev = [
    "ruff",
    "mypy[mypyc,faster-cache]",
    "pip>=25.2",
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "pre-commit",
    "pytest-timeout>=2.4.0",
    "hatch-vcs>=0.5.0",
    "hatch>=1.14.2",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".", search_parent_directories = true, fallback_version = "0.0.0" }

[tool.hatch.build.targets.wheel]
packages = ["src/pipecat_getstream"]

[tool.hatch.build.targets.sdist]
include = ["src/pipecat_getstream"]


[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--timeout=60",
    "--import-mode=importlib",
    "--ignore=.env",
    "--ignore=.env.local",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
log_cli = true
log_cli_level = "INFO"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src/pipecat_getstream"]
# Gradual typing → can tighten over time
ignore_missing_imports = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
